fixes bug that caused program blocks to wrap inline with CTA button on home page

--- a/themes/Spring-University/sass/_home.scss
+++ b/themes/Spring-University/sass/_home.scss
@@ -207,7 +207,7 @@
 //Program Blocks on home page
 
 .program_blocks {
-  max-width: $content_width;
+  min-width: 80%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
